netbox-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
  labels:
    name: netbox
    component: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: netbox
        component: backend
    spec:
      containers:
      - name: netbox
        image: netboxcommunity/netbox:latest
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: netbox-media-files
          mountPath: /opt/netbox/netbox/media
        - name: netbox-nginx-config
          mountPath: /etc/netbox-nginx/
        - name: netbox-static-files
          mountPath: /opt/netbox/netbox/static
      restartPolicy: Always
      volumes:
      - name: netbox-media-files
        persistentVolumeClaim:
          claimName: netbox-media-files
      - name: netbox-nginx-config
        configMap:
          name: nginx-conf
      - name: netbox-static-files
        persistentVolumeClaim:
          claimName: netbox-static-files

---
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
  labels:
    name: netbox
    component: backend
spec:
  ports:
  - name: nbox
    port: 8001
    targetPort: 8001
  selector:
    name: netbox
    component: backend
