nginx-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: netbox
  labels:
    name: nginx
    component: frontend
    part-of: netbox
spec:
  selector:
    matchLabels:
      name: nginx
      component: frontend
      part-of: netbox
  replicas: 2
  template:
    metadata:
      labels:
        name: nginx
        component: frontend
        part-of: netbox
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        command: ["nginx"]
        args: ["-c", "/etc/netbox-nginx/nginx.conf","-g", "daemon off;"]
        volumeMounts:
        - name: netbox-static-files
          mountPath: /opt/netbox/netbox/static
        - name: netbox-nginx-config
          mountPath: /etc/netbox-nginx
      restartPolicy: Always
      volumes:
      - name: netbox-static-files
        persistentVolumeClaim:
          claimName: netbox-static-files
      - name: netbox-nginx-config
        configMap:
          name: nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: netbox
  labels:
    name: nginx
    component: frontend
    part-of: netbox
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 8888
  selector:
    name: nginx
    component: frontend
    part-of: netbox
