postgres-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    backend: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        backend: postgres
    spec:
      containers:  
      - image: postgres:10-alpine
        name: postgres 
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: netbox-pg-backups
          mountPath: /var/lib/backups
      volumes:
      - name: netbox-pg-backups
        persistentVolumeClaim:
         claimName: netbox-pg-backups
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    backend: postgres
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 5432
    targetPort: 5432
  selector:
    backend: postgres
